--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Logan Hennessy <logan@gradient.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+typer = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
